--- a/build.gradle
+++ b/build.gradle
@@ -36,8 +36,11 @@ neoForge {
         minecraftVersion = project.parchment_minecraft_version
     }
 
+    validateAccessTransformers = true
+
     // This line is optional. Access Transformers are automatically detected
-    // accessTransformers.add('src/main/resources/META-INF/accesstransformer.cfg')
+    accessTransformers.from 'src/main/resources/META-INF/accesstransformer.cfg'
+
 
     // Default run configurations.
     // These can be tweaked, removed, or duplicated as needed.
