--- a/src/main/templates/META-INF/neoforge.mods.toml
+++ b/src/main/templates/META-INF/neoforge.mods.toml
@@ -1,17 +1,18 @@
 modLoader = "javafml" #mandatory
 loaderVersion = "${loader_version_range}" #mandatory
 license = "${mod_license}"
-#issueTrackerURL="https://change.me.to.your.issue.tracker.example.invalid/" #optional
+issueTrackerURL="https://github.com/RealDarkStudios/PMWeatherAPI/issues" #optional
+
 [[mods]] #mandatory
 modId = "${mod_id}" #mandatory
 version = "${mod_version}" #mandatory
 displayName = "${mod_name}" #mandatory
-#updateJSONURL="https://change.me.example.invalid/updates.json" #optional
-#displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
-#logoFile="pmweatherapi.png" #optional
-#credits="" #optional
+# The JSON Updates will currently fail because the modrinth project does not exist
+updateJSONURL="https://api.modrinth.com/updates/pmweatherapi/forge_updates.json" #optional
+displayURL="https://github.com/RealDarkStudios/PMWeatherAPI/" #optional
+logoFile="logo.png" #optional
+credits="All GitHub contributors" #optional
 authors = "${mod_authors}" #optional
-
 description = '''${mod_description}'''
 
 [[mixins]]
@@ -38,6 +39,6 @@ side = "BOTH"
 modId = "pmweather"
 type = "required"
 versionRange = "[0.14.15-${minecraft_version}-alpha]"
-ordering = "AFTER"
+ordering = "BEFORE"
 side = "BOTH"
 
