--- a/build.gradle
+++ b/build.gradle
@@ -130,7 +130,7 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
-    implementation "maven.modrinth:protomanlys-weather:0.14.15-alpha"
+    implementation "maven.modrinth:protomanlys-weather:${pmweather_version}-alpha"
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
@@ -146,7 +146,8 @@ var generateModMetadata = tasks.register("generateModMetadata", ProcessResources
                              mod_license            : mod_license,
                              mod_version            : mod_version,
                              mod_authors            : mod_authors,
-                             mod_description        : mod_description]
+                             mod_description        : mod_description,
+                             pmweather_version      : pmweather_version]
     inputs.properties replaceProperties
     expand replaceProperties
     from "src/main/templates"
