--- a/build.gradle
+++ b/build.gradle
@@ -147,7 +147,8 @@ var generateModMetadata = tasks.register("generateModMetadata", ProcessResources
                              mod_version            : mod_version,
                              mod_authors            : mod_authors,
                              mod_description        : mod_description,
-                             pmweather_version      : pmweather_version]
+                             pmweather_version      : pmweather_version,
+                             pmweather_version_range: pmweather_version_range]
     inputs.properties replaceProperties
     expand replaceProperties
     from "src/main/templates"
