--- a/src/main/templates/META-INF/neoforge.mods.toml
+++ b/src/main/templates/META-INF/neoforge.mods.toml
@@ -38,7 +38,7 @@ side = "BOTH"
 [[dependencies."${mod_id}"]]
 modId = "pmweather"
 type = "required"
-versionRange = "[${pmweather_version}-${minecraft_version}-alpha]"
+versionRange = "${pmweather_version_range}"
 ordering = "BEFORE"
 side = "BOTH"
 
