--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ parchment_mappings_version=2024.11.17
 mod_id=pmweatherapi
 mod_name=PMWeatherAPI
 mod_license=GNU GPL 3.0
-mod_version=0.15.3.2
+mod_version=0.15.3.3-storages-1
 mod_group_id=net.nullved
 mod_authors=NullVed
 mod_description=An API for interfacing with ProtoManly's Weather Mod
